--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,7 +76,7 @@ button {
     background-color: white;
     border-radius: 10px;
     width: 100%;
-    box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 22%);
+    box-shadow: 0px 0px 3px 2px rgb(0 0 0 / 25%);
 }
 
 h1,
@@ -102,7 +102,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .mat-drawer-content {
-    background-color: #ccd0d3 !important;
+    background-color: #dddfe0 !important;
 }
 
 .txac {
@@ -185,7 +185,7 @@ table {
 }
 
 .header {
-    background-color: #1c3660;
+    background-color: #59595c;
     color: white;
     display: flex;
     align-items: center;
