--- a/src/app/components/level-water-measure/level-water-measure.component.html
+++ b/src/app/components/level-water-measure/level-water-measure.component.html
@@ -1,1 +1,8 @@
-<p>level-water-measure works!</p>
+<div class="bottleCont">
+    <div class="pipes">
+
+    </div>
+</div>
+<div>
+    <h2 id="measure"></h2>
+</div>
