--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,16 +20,13 @@
         <div class="pad40 jcc">
             <div class="w100">
                 <div class="flx jcc">
-                    <div class="w50">
-                        <app-water-measure></app-water-measure>
-                    </div>
-                    <div class="w50">
-                        <app-energy-button [idN]="'engSilo'"></app-energy-button>
+                    <div class="w100">
+                        <app-water-measure [idN]="'messure'"></app-water-measure>
                     </div>
                 </div>
-                <div class="flx jcc">
+                <div class="">
                     <div>
-                        <app-level-water-measure></app-level-water-measure>
+                        <app-level-water-measure [idM]="'messure'"></app-level-water-measure>
                     </div>
                 </div>
             </div>
