--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,16 +17,13 @@
         <div class="header">
             <h1>Pozo 1</h1>
         </div>
-        <div class="pad40 jcc">
-            <div class="w100">
-                <div class="flx jcc">
-                    <div class="w100">
-                        <app-water-measure [idN]="'messure'"></app-water-measure>
-                    </div>
-                </div>
-                <div class="">
-                    <div>
-                        <app-level-water-measure [idM]="'messure'"></app-level-water-measure>
+        <div class="jcc">
+            <div class="w100 scroll">
+                <div class="pad40">
+                    <div class="flx jcc">
+                        <div class="w100">
+                            <app-water-measure [idN]="'messure'"></app-water-measure>
+                        </div>
                     </div>
                 </div>
             </div>
