--- a/src/app/components/water-measure/water-measure.component.scss
+++ b/src/app/components/water-measure/water-measure.component.scss
@@ -15,11 +15,12 @@
 }
 
 .mainBody {
-    position: absolute;
-    bottom: 14px;
-    left: 80px;
-    height: 282px;
+    position: absolute !important;
+    bottom: 10px;
+    left: 50px;
+    height: 196px;
     overflow: hidden;
+    width: 92px;
 }
 
 .bodyGrow {
@@ -28,6 +29,34 @@
     background-color: rgba(132, 171, 242, 0.715);
     width: 145px;
     transition: all ease .3s;
+}
+
+.bottleCont {
+    height: 196px;
+    width: 40px;
+    border: 3px solid rgba(36, 36, 36, 0.87);
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+    background-color: rgba(206, 225, 246, 0.519);
+}
+
+.pipes {
+    height: 196px;
+    width: 100%;
+    background-color: rgb(69, 193, 137);
+    transition: background-color ease .7s;
+}
+
+.scale {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-image: url(./../../../assets/images/icons/scaleIcon.png);
+    background-position: top center;
+    background-repeat: no-repeat;
 }
 
 //#region button
@@ -207,6 +236,44 @@
     .pozo {
         width: 475px;
     }
+    .pipes,
+    .bottleCont {
+        height: 260px;
+    }
+    .mainBody {
+        position: absolute !important;
+        bottom: 14px !important;
+        left: 80px !important;
+        height: 282px;
+        overflow: hidden;
+        width: auto !important;
+    }
 }
 
-//#endregion
+@media only screen and (max-width: 719px) {
+    .float {
+        position: absolute;
+        right: 20px;
+        top: 84px;
+    }
+}
+
+@media only screen and (max-width: 523px) {
+    .float {
+        position: absolute;
+        left: 20px;
+        top: 84px;
+    }
+}
+
+@media only screen and (max-width: 1000px) and (min-height:1200px) {
+    .float {
+        position: absolute;
+        left: 20px;
+        top: 84px;
+    }
+}
+
+img {
+    pointer-events: none;
+}
