--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -54,7 +54,7 @@
 }
 
 .h95 {
-    height: 95%;
+    height: 90vh;
 }
 
 .cartaDetalle {
@@ -69,8 +69,22 @@
     display: none;
     transition: all ease .3s;
     top: 0;
+    box-sizing: border-box
 }
 
 .pad40 {
-    padding: 40px;
+    padding: 20px;
+}
+
+.scroll {
+    height: 98vh;
+    overflow: auto;
+    padding: 10px 0;
+    box-sizing: border-box
+}
+
+.midRight {
+    display: flex;
+    align-items: center;
+    justify-content: right;
 }
