--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
         <div class="jcc">
             <div class="w100 scroll">
                 <div class="pad40">
-                    <div class="flx jcc">
+                    <div class="flx jcc h100">
                         <div class="w100">
                             <app-water-measure [idN]="'messure'"></app-water-measure>
                         </div>
