--- a/src/app/components/water-measure/water-measure.component.scss
+++ b/src/app/components/water-measure/water-measure.component.scss
@@ -2,8 +2,23 @@
     width: 300px;
 }
 
+.contGen {
+    display: flex;
+    flex-direction: column;
+}
+
+.rest {
+    flex: 1;
+}
+
 .rela {
     position: relative;
+}
+
+.float {
+    position: absolute;
+    top: 20px;
+    left: 20px !important;
 }
 
 .water {
@@ -11,7 +26,7 @@
     animation: animate2 4s ease-in-out infinite;
     background-color: rgba(132, 171, 242, 0.715);
     width: 145px;
-    height: 66px;
+    height: 10%;
 }
 
 .mainBody {
@@ -21,11 +36,13 @@
     height: 196px;
     overflow: hidden;
     width: 92px;
+    display: flex;
+    align-items: end;
 }
 
 .bodyGrow {
-    height: 216px;
-    max-height: 216px;
+    height: 100%;
+    // max-height: 216px;
     background-color: rgba(132, 171, 242, 0.715);
     width: 145px;
     transition: all ease .3s;
@@ -44,10 +61,10 @@
 }
 
 .pipes {
-    height: 196px;
+    height: 100%;
     width: 100%;
     background-color: rgb(69, 193, 137);
-    transition: background-color ease .7s;
+    transition: background-color ease 1.7s;
 }
 
 .scale {
@@ -59,6 +76,147 @@
     background-repeat: no-repeat;
 }
 
+.pad {
+    padding: 15px;
+}
+
+.w90 {
+    width: 90%;
+}
+
+.goUpDown {
+    transition: all ease .7s;
+    max-height: 100%;
+}
+
+.agua {
+    position: absolute;
+    right: -65px;
+    top: 114px;
+    display: none;
+}
+
+.drop {
+    scale: 0.34;
+    transform: scale(-1, 1);
+    overflow: hidden !important;
+}
+
+.alibot {
+    display: flex;
+    align-items: flex-end;
+}
+
+.mar {
+    margin-right: 17px;
+}
+
+.jcr {
+    justify-content: right;
+}
+
+.title {
+    font-weight: 400;
+    font-size: 26px;
+    position: absolute;
+    top: 0;
+    right: -15px;
+}
+
+.prof {
+    position: absolute;
+    top: 0;
+    right: 10px;
+}
+
+h4,
+h3 {
+    font-weight: 500;
+}
+
+h2 {
+    font-weight: 400;
+    color: #3b3b3b;
+}
+
+//#region pressure
+.speedometer {
+    width: 121px;
+    height: 55px;
+    border-radius: 100px 100px 0 0;
+    // border: 45px solid rgb(70, 84, 177);
+    background: linear-gradient(white, white) padding-box, linear-gradient(to right, rgb(47, 117, 163), rgb(143, 254, 96), rgb(237, 165, 41)) border-box;
+    border: 45px solid transparent;
+    border-bottom: none;
+    display: inline-block;
+    position: relative;
+    transition: all ease .6s;
+}
+
+.speedometer::before {
+    content: "";
+    position: absolute;
+    width: 7px;
+    height: 80px;
+    background: #999999;
+    border-radius: 100% 100% 5px 5px;
+    left: calc(50% - 3px);
+    bottom: 3px;
+    transform-origin: bottom;
+    transform: rotate(calc(var(--r)*1.8deg - 90deg));
+    transition: all ease .6s;
+}
+
+.tituloProf {
+    position: absolute;
+    top: -19%;
+}
+
+.d_0 {
+    --r: 0 !important;
+}
+
+.d_10 {
+    --r: 10 !important;
+}
+
+.d_20 {
+    --r: 20 !important;
+}
+
+.d_30 {
+    --r: 30 !important;
+}
+
+.d_40 {
+    --r: 40 !important;
+}
+
+.d_50 {
+    --r: 50 !important;
+}
+
+.d_60 {
+    --r: 60 !important;
+}
+
+.d_70 {
+    --r: 70 !important;
+}
+
+.d_80 {
+    --r: 80 !important;
+}
+
+.d_90 {
+    --r: 90 !important;
+}
+
+.d_100 {
+    --r: 100 !important;
+}
+
+//#endregion
 //#region button
 .btnEnergy1,
 .btnEnergy2 {
@@ -236,7 +394,6 @@
     .pozo {
         width: 475px;
     }
-    .pipes,
     .bottleCont {
         height: 260px;
     }
