--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -60,7 +60,7 @@
 .cartaDetalle {
     position: absolute;
     background-color: white;
-    width: 65%;
+    width: 36%;
     z-index: 3;
     right: 0;
     border-radius: 20px 0 0 20px;
@@ -69,11 +69,14 @@
     display: none;
     transition: all ease .3s;
     top: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    min-width: 648px
 }
 
 .pad40 {
-    padding: 20px;
+    padding: 20px 0 20px 20px;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .scroll {
