--- a/src/app/components/water-measure/water-measure.component.scss
+++ b/src/app/components/water-measure/water-measure.component.scss
@@ -139,6 +139,54 @@ h2 {
     color: #3b3b3b;
 }
 
+.off,
+.on {
+    width: 20px;
+    height: 20px;
+    scale: .5;
+    border-radius: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(170, 57, 85, 0.548);
+    border: 5px solid rgb(19, 36, 59);
+}
+
+.on {
+    background-color: rgb(207, 35, 78);
+    box-shadow: 0px 0px 40px 20px red;
+    animation: light-up 2s infinite ease-in-out;
+    border: 5px solid rgb(75, 17, 25);
+}
+
+.shine,
+.shineOff {
+    background-color: rgba(255, 255, 255, 0.445);
+    height: 20px;
+    width: 20px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.shine {
+    animation: shine 2s infinite ease-in-out;
+}
+
+.shiny {
+    width: 5px;
+    height: 5px;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.26);
+}
+
+.redLed {
+    left: 45%;
+    top: 0;
+    position: absolute;
+}
+
 //#region pressure
 .speedometer {
     width: 121px;
@@ -380,6 +428,30 @@ h2 {
 }
 
 //#endregion
+@keyframes shine {
+    0% {
+        box-shadow: 0px 0px 30px -4px white;
+    }
+    50% {
+        box-shadow: 0px 0px 30px -1px white;
+    }
+    100% {
+        box-shadow: 0px 0px 30px -4px white;
+    }
+}
+
+@keyframes light-up {
+    0% {
+        box-shadow: 0px 0px 7px -4px rgb(231, 32, 75);
+    }
+    50% {
+        box-shadow: 0px 0px 7px 4px rgb(231, 32, 75);
+    }
+    100% {
+        box-shadow: 0px 0px 7px -4px rgb(231, 32, 75);
+    }
+}
+
 @keyframes animate2 {
     0%,
     100% {
